--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "modulePaths":["<rootDir>"],
+    "rootDir": "./",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
