--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
-JWT_SECRET=
-JWT_EXPIRE=
+DATABASE_URL= "file:./dev.db" #alterar caso não for usar sqlite
+JWT_SECRET= #codigo para gerar token
+JWT_EXPIRE= #prazo para expirar o token
