--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL= "file:./dev.db" #alterar caso não for usar sqlite
-JWT_SECRET= #codigo para gerar token
-JWT_EXPIRE= #prazo para expirar o token
+JWT_SECRET= #codigo para gerar token, ex= "123456789"
+JWT_EXPIRE= #prazo para expirar o token, ex = "30 days"
